[package]
name = "manage_relay_users"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/thesimplekid/manage-relay-users"
authors = ["thesimplekid"]
license = "BSD-3-Clause"
readme = "README.md"
description = "gRPC extension for the nostr-rs-relay to manager allowed users"

[dependencies]
tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
tonic = { version = "0.9.2", features = ["prost"] }
config = { version = "0.13", features = ["toml"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
redb = { version = "1.0.5" }
log = "0.4.17"
ctrlc = "3.2.5"
hex = "0.4.3"
axum = { version = "0.6.11", features=["json"] }
clap = { version = "4.3.14", features = ["env", "default", "derive"]}
anyhow = "1.0.72"

[dev-dependencies]
serial_test = "2.0.0"
tracing-test = "0.2.4"

[build-dependencies]
tonic-build = { version="0.9.2", features = ["prost"] }
